--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                 <!--Cloudstack-->
             </section>
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Thrive-9/">https://baay22.github.io/Thrive-9/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Thrive/Thrive-9/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Thrive/Thrive-9/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Thrive/Thrive-9/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Thrive/Thrive-9/index.html</a><br>
+                <a target="_bLank" href="https://willowy-capybara-c94a0c.netlify.app/">https://willowy-capybara-c94a0c.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
